--- a/styles/style.css
+++ b/styles/style.css
@@ -76,21 +76,92 @@ p {
     display: none;
 }
 
+.align-right {
+    text-align: right;
+}
+
 .game-scene {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
+.antibiotic {
+    border-radius: 25px;    
+    width: 3vmin;
+    height: 9vmin;
+    position: absolute;
+}
+
+.antibiotic-a {
+    background: radial-gradient(red, darkred 95%, transparent);
+    top: 50vmin;
+    left: 25vmin;
+}
+
+.antibiotic-b {
+    background: radial-gradient(lime, green 95%, transparent);
+    top: 10vmin;
+    left: 15vmin;
+}
+
+.antibiotic-c {
+    background: radial-gradient(blue, mediumblue 95%, transparent);
+    top: 35vmin;
+    left: 55vmin;
+}
+
+.antibiotic-markers-container {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.antibiotic-marker {
+    border-radius: 25px;
+    width: 5.5vmin;
+    height: 2.5vmin;
+    border: 1px solid black;
+    margin-left: 0.75vmin;
+    background: linear-gradient(90deg, red 49%, black 49%, black 51%, white 51%);
+}
+
+.antibiotic-marker--empty {
+    background: linear-gradient(90deg, gray 49%, black 49%, black 51%, gray 51%);
+}
+
+#play-scene,
+.game-scene {
+    height: 100%;
+    justify-content: space-between;
+}
+
+#game-stats {
+    justify-self: flex-start;
+    font-size: 1.25rem;
+    padding: 10px 0;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+
+#game-stats > div {
+    padding: 0 20px;
+    display: flex;
+    flex-direction: column;
+}
+
 #start-scene p {
     margin-bottom: 70px;
 }
 
-/* https://stackoverflow.com/a/51496341/263158 */
+/*
+* Add gradient to border 
+* https://stackoverflow.com/a/51496341/263158 
+*/
 #petri-dish {
     border-radius: 50%;
-    width: 70vmin;
-    height: 70vmin;
+    width: 65vmin;
+    height: 65vmin;
     padding: 2.5vmin;
     border: 2.5vmin solid transparent;
     background: radial-gradient(circle at center, transparent, white, lightgray 68%, black) padding-box,
@@ -103,8 +174,15 @@ p {
     border-radius: 3.75vmin;
     width: 8vmin;
     height: 16vmin;
-    background: purple;
+    background: radial-gradient( purple, mediumpurple);
     position: absolute;
     top: 25vmin;
     left: 15vmin;
+}
+
+@media (max-width: 500px) {
+    p,
+    #game-stats {
+        font-size: 1rem;
+    }
 }
